build: declare native access for production jars